--- a/templates/index.html
+++ b/templates/index.html
@@ -7,38 +7,35 @@
     <table class="table t1">
       <thead class="bg-info rounded">
         <tr>
-          <th scope="col" class="text-left">Select station</th>
-        </tr>
-      </thead>
-    </table>
-
-    <select name=colours method="GET" action="/">
-      {% for radio in radios %}
-      <option value="{{colour}}" SELECTED>{{radios}}</option>"
-      {% endfor %}
-    </select>
-
-    <p class="mt-sm-2 mb-sm-4"></p>
-
-    <table class="table t1">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col" class="text-left">Play Stop</th>
+          <th scope="col" class="text-left">Actual station:  {{actualPlay}}</th>
         </tr>
       </thead>
     </table>
 
     <div class="row">
       <div class="col-6"><button type="submit" name="button" value="Start"
+          class="btn btn-warning btn-block" disabled>Volume: {{volume}}</button></div>
+          <div class="col-6"><select class="btn btn-success btn-block" name=colours method="GET" action="/">
+      {% for radio in radios %}
+      <option value="{{radio}}" SELECTED>{{radio}}</option>"
+      {% endfor %}
+    </select></div>
+    </div>
+
+    <p class="mt-sm-2 mb-sm-4"></p>
+
+
+    <div class="row">
+      <div class="col-6"><button type="submit" name="button" value="Play"
           class="btn btn-success btn-block">Play</button></div>
-      <div class="col-6"><button type="submit" name="button" value="Pause"
+      <div class="col-6"><button type="submit" name="button" value="Stop"
           class="btn btn-danger btn-block">Stop</button></div>
     </div>
 
     <p class="mt-sm-2 mb-sm-4"></p>
 
     <table class="table t1">
-      <thead class="thead-dark">
+      <thead class="bg-info">
         <tr>
           <th class="col-2" scope="col">Volume</th>
         </tr>
@@ -48,9 +45,9 @@
     </table>
 
     <div class="row">
-      <div class="col-6"><button type="submit" name="button" value="Volume Up" class="btn btn-success btn-block">Volume
+      <div class="col-6"><button type="submit" name="button" value="VolumeUp" class="btn btn-success btn-block">Volume
           Up</button></div>
-      <div class="col-6"><button type="submit" name="button" value="Volume Down"
+      <div class="col-6"><button type="submit" name="button" value="VolumeDown"
           class="btn btn-success btn-block">Volume Down</button></div>
     </div>
 
@@ -64,19 +61,12 @@
     </table>
 
     <div class="row">
-      <div class="col-6"><button type="submit" name="button" value="Volume Up Up"
+      <div class="col-6"><button type="submit" name="button" value="VolumeUpUp"
           class="btn btn-success btn-block">Volume Up Up</button></div>
-      <div class="col-6"><button type="submit" name="button" value="Volume Down Down"
+      <div class="col-6"><button type="submit" name="button" value="VolumeDownDown"
           class="btn btn-success btn-block">Volume Down Down</button></div>
     </div>
   </form>
-</div>
-
-<div class="dropdown show">
-  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-    aria-haspopup="true" aria-expanded="false">
-    Dropdown link
-  </a>
 </div>
 
 {% endblock %}
