--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <table class="table t1">
       <thead class="bg-info rounded">
         <tr>
-          <th scope="col" class="text-left">Actual station: {{actualPlay}}</th>
+          <th scope="col" class="text-left">Actual station: {{actualPlay.name}}</th>
         </tr>
       </thead>
     </table>
@@ -18,10 +18,10 @@
       <div class="col-6">
         <select class="btn btn-success btn-block" name="selectRadio">
           {% for radio in radios %}
-            {% if selectedItem == radio %}
-              <option value="{{radio}}" selected>{{radio}}</option>"
+            {% if selectedItem == radio.name %}
+              <option value="{{radio.name}}" selected>{{radio.name}}</option>
             {% else %}
-              <option value="{{radio}}">{{radio}}</option>"
+              <option value="{{radio.name}}">{{radio.name}}</option>"
             {% endif %}
           {% endfor %}
         </select>
