Add Speaker Controll

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,10 +53,10 @@
     </table>
 
     <div class="row">
+      <div class="col-6"><button type="submit" name="button" value="VolumeDown" class="btn btn-success btn-block">Volume
+        Down</button></div>
       <div class="col-6"><button type="submit" name="button" value="VolumeUp" class="btn btn-success btn-block">Volume
           Up</button></div>
-      <div class="col-6"><button type="submit" name="button" value="VolumeDown" class="btn btn-success btn-block">Volume
-          Down</button></div>
     </div>
 
     <table class="table t1">
@@ -69,11 +69,32 @@
     </table>
 
     <div class="row">
+      <div class="col-6"><button type="submit" name="button" value="VolumeDownDown"
+        class="btn btn-success btn-block">Volume Down Down</button></div>
       <div class="col-6"><button type="submit" name="button" value="VolumeUpUp" class="btn btn-success btn-block">Volume
           Up Up</button></div>
-      <div class="col-6"><button type="submit" name="button" value="VolumeDownDown"
-          class="btn btn-success btn-block">Volume Down Down</button></div>
     </div>
+
+    <p class="mt-sm-2 mb-sm-4"></p>
+
+    <table class="table t1">
+      <thead class="bg-info">
+        <tr>
+          <th class="col-2" scope="col">Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+
+    <div class="row">
+      <div class="col-4"><button type="submit" name="button" value="SpeakerOnOff" class="btn btn-danger btn-block">On / Off</button></div>
+      <div class="col-4"><button type="submit" name="button" value="SpeakerVolumeDown" class="btn btn-success btn-block">Volume
+        Down</button></div>
+      <div class="col-4"><button type="submit" name="button" value="SpeakerVolumeUp" class="btn btn-success btn-block">Volume
+          Up</button></div>
+    </div>
+
   </form>
 </div>
 
